--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "better-scroll": "^1.15.2",
     "less-loader": "^5.0.0",
     "stylus": "^0.58.1",
     "stylus-loader": "^3.0.2",
